--- a/core/templates/core/project_overview.html
+++ b/core/templates/core/project_overview.html
@@ -275,7 +275,7 @@
       <i class="bi bi-folder2"></i>
       <span>{% trans "Files" %}</span>
     </a>
-    <a href="{% url 'budget_lines' project.id %}" class="nav-btn">
+    <a href="{% url 'budget_wizard' project.id %}" class="nav-btn">
       <i class="bi bi-wallet2"></i>
       <span>{% trans "Budget" %}</span>
     </a>
@@ -355,7 +355,7 @@
     
     <!-- Financiero -->
     <div class="section-title">{% trans "Financiero" %}</div>
-    <a href="{% url 'budget_lines' project.id %}" class="nav-item">
+    <a href="{% url 'budget_wizard' project.id %}" class="nav-item">
       <i class="bi bi-wallet2"></i>
       <span class="nav-text">{% trans "Budget" %}</span>
     </a>
@@ -490,7 +490,7 @@
       
       <!-- Financiero -->
       <div class="section-title">{% trans "Financiero" %}</div>
-      <a href="{% url 'budget_lines' project.id %}" class="nav-item">
+      <a href="{% url 'budget_wizard' project.id %}" class="nav-item">
         <i class="bi bi-wallet2"></i>
         <span class="nav-text">{% trans "Budget" %}</span>
       </a>
