fix: Change employee_list URL to Django admin URL

--- a/core/templates/core/components/sidebar_dark.html
+++ b/core/templates/core/components/sidebar_dark.html
@@ -106,7 +106,7 @@
                     <i class="bi bi-gear"></i>
                     <span>{% trans "Admin Dashboard" %}</span>
                 </a>
-                <a href="{% url 'employee_list' %}" class="sidebar-item">
+                <a href="/admin/core/employee/" class="sidebar-item">
                     <i class="bi bi-person-badge"></i>
                     <span>{% trans "Employees" %}</span>
                 </a>
