--- a/core/templates/core/components/sidebar_dark.html
+++ b/core/templates/core/components/sidebar_dark.html
@@ -15,7 +15,7 @@
     </div>
     
     {# Navigation #}
-    <nav class="py-4 px-3 space-y-6">
+    <nav class="py-4 px-3 space-y-6 pb-24">
         
         {# ===== MAIN SECTION ===== #}
         <div class="space-y-1">
